[REFACTOR] fix code in MessageRepositoryTest